2002-12-04  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPipe.c (Tcl_WaitPid):  When a process exits with an
	exception, pass this notice on to the caller with a SIG* code
	rather than truncating the exit code and missing the meaning.
	This allows TclCleanupChildren() to report "CHILDKILLED".

	This has a different behavior than unix in that closing the
	read pipe to a process sends the SIGPIPE signal which is
	returned as a SIGPIPE exit status.  On windows, we send the
	process a CTRL_BREAK_EVENT and get back a CONTROL_C_EXIT which
	is documented to mean a SIGINT which seems wrong as a system,
	but is the correct exit status.

2002-12-04  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to redirected 'load' in virtual
	filesystem for some Unix systems.

	* generic/tclEvent.c: the filesystem must be cleaned up before
	the encoding subsystem because it needs access to encodings.
	Fixes crash on exit observed in embedded applications.

	* generic/tclTestObj.c: patch omitted from previous change
	of 2002-11-13
	
2002-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubLib.c (Tcl_InitStubs): prevent the cached check of
	tclStubsPtr to allow for repeated load/unload of the Tcl dll by
	hosting apps. [Bug 615304]

2002-12-03  David Gravereaux  <davygrvy@pobox.com>

	* win/tclAppInit.c (sigHandler):  Protect from trying to close a
	NULL handle.

	* win/tclWinPipe.c (PipeClose2Proc, TclpCreateProcess):  Send a
	real Win32 signal (CTRL_C_EVENT) when the read channel is brought
	down to alert the child to close on its side.  Start the process
	with CREATE_NEW_PROCESS_GROUP to allow the ability to send these
	signals.  The following test case now brings down the child
	without the use of an external [kill] command.

	% set p [open "|[info name]" w+]
	file8d5380
	% pid $p
	2876
	% close $p     <- now doesn't block in Tcl_WaitPid()
	%

	* win/tclWinPipe.c (PipeClose2Proc):  Changed CTRL_C_EVENT